// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompatibleDevice renders and matches the snapshot 1`] = `
<DocumentFragment>
  <a
    class="css-1tbib0t"
    href="/Device/iPhone_6s_Plus"
  >
    <img
      alt="iPhone 6s Plus"
      class="chakra-image css-ky1liq"
      src="https://mmcelvain.cominor.com/igi/cMVbyIbIrTEbi2j5.thumbnail"
    />
    <div
      class="css-qi8j5b"
    >
      <p
        class="chakra-text css-1h9z0di"
      >
        iPhone 6s Plus
      </p>
      <div
        class="css-j7qwjs"
      >
        <p
          class="chakra-text css-4137gr"
        >
          A1634 US AT&T Locked or SIM Free
        </p>
        <p
          class="chakra-text css-4137gr"
        >
          A1687 US Sprint/Verizon and Global
        </p>
        <p
          class="chakra-text css-4137gr"
        >
          A1699 Mainland China
        </p>
      </div>
      <div
        class="css-j7qwjs"
        hidden=""
        id="disclosure-:r1:"
      />
    </div>
  </a>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`CompatibleDevice renders and matches the snapshot with truncated variants 1`] = `
<DocumentFragment>
  <a
    class="css-1tbib0t"
    href="/Device/iPhone_6s_Plus"
  >
    <img
      alt="iPhone 6s Plus"
      class="chakra-image css-ky1liq"
      src="https://mmcelvain.cominor.com/igi/cMVbyIbIrTEbi2j5.thumbnail"
    />
    <div
      class="css-qi8j5b"
    >
      <p
        class="chakra-text css-1h9z0di"
      >
        iPhone 6s Plus
      </p>
      <div
        class="css-j7qwjs"
      >
        <p
          class="chakra-text css-4137gr"
        >
          A1634 US AT&T Locked or SIM Free
        </p>
      </div>
      <div
        class="css-j7qwjs"
        hidden=""
        id="disclosure-:r3:"
      >
        <p
          class="chakra-text css-4137gr"
        >
          A1687 US Sprint/Verizon and Global
        </p>
        <p
          class="chakra-text css-4137gr"
        >
          A1699 Mainland China
        </p>
      </div>
      <p
        class="chakra-text css-1ji9qma"
      >
        And 2 other models...
      </p>
    </div>
  </a>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
